configs_rishi/etc/iptables/rules.v4
# Generated by xtables-save v1.8.2 on Sun Jun  7 15:14:40 2020
*mangle
:PREROUTING ACCEPT [719:99365]
:INPUT ACCEPT [660:94877]
:FORWARD ACCEPT [56:3656]
:OUTPUT ACCEPT [522:50086]
:POSTROUTING ACCEPT [627:59878]
-A PREROUTING -p udp -m udp --dport 53 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p tcp -m tcp --dport 53 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p udp -m udp --dport 53 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -p tcp -m tcp --dport 53 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -p udp -m udp --dport 53 -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -p tcp -m tcp --dport 53 -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Sun Jun  7 15:14:40 2020
# Generated by xtables-save v1.8.2 on Sun Jun  7 15:14:40 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
# Completed on Sun Jun  7 15:14:40 2020
# Generated by xtables-save v1.8.2 on Sun Jun  7 15:14:40 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Jun  7 15:14:40 2020
